Changing to default edinburgh webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-Hello World
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta name="keywords" content="kiran chandramohan phd edinburgh informatics chengannur cec homepage">
+<title> Homepage of Kiran Chandramohan </title></head><body bgcolor="#ffffdd" link="#0000ef" text="#0000aa"> 
+<table border="0" width="700">
+	<tbody>
+	<tr> 
+	<td> <img src="images/kiran_photo.png" alt="[photograph]" align="left" height="170"> </td>
+	<td><table border="0">
+		<tbody>
+		<tr>
+		<td width="10%"></td><td><big><em>Kiran Chandramohan</em></big></td>
+                </tr>
+                <tr>
+                <td></td>
+                <td><em>PhD Student</em></td>
+                </tr>
+                <tr>
+                <td></td>
+                <td><em>Institute for Computing Systems Architecture</em></td>
+                </tr>
+                <tr>
+                <td></td>
+                <td><em>School of Informatics</em></td>
+                </tr>
+                <tr>
+                <td></td>
+                <td><em>University of Edinburgh.</em></td>
+                </tr>
+                </tbody>
+             </table>
+	</td>
+	</tr>
+	</tbody>
+</table>
+
+<hr align="left" noshade="noshade" size="7">
+<ul>
+<li><b>Research Interests :</b> Compilers for Heterogeneous Multicores, ASIP Synthesis, High Level Synthesis</li>
+<li><b>Publications :</b> 
+<ul>
+<li><a href="http://dx.doi.org/10.1145/2656106.2656107">Chandramohan, Kiran and O'Boyle, Michael F.P., A Compiler Framework for Automatically Mapping DataParallel Programs to Heterogeneous MPSoCs, CASES 2014.</a></li>
+
+<li><a href="http://doi.acm.org/10.1145/2597809.2597822">Chandramohan, Kiran and O'Boyle, Michael F.P., Partitioning Data-parallel Programs for Heterogeneous MPSoCs: Time and Energy Design Space Exploration, LCTES 2014,</a></li>
+
+<li><a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5401277&isnumber=5401179">Arora, N.; Chandramohan, K.; Pothineni, N.; Kumar, A.; , "Instruction Selection in ASIP Synthesis Using Functional Matching," VLSID 2010.</a></li>
+</ul>
+</li>
+</ul>
+
+<hr align="left" noshade="noshade" size="7">
+
+<ul>
+<li><b>Address :</b> 1.05, Informatics Forum, 10 Crichton Street, Edinburgh, EH8 9AB, Scotland, United Kingdom</li>
+<li><b>Email :</b> k.chandramohanATsms.ed.ac.uk</li>
+<li><b>Social Networks :</b> 
+<a href="http://kiran_c.livejournal.com">Blog</a>, 
+<a href="http://www.linkedin.com/pub/kiran-chandramohan/8/573/561">Linkedin</a>,
+<a href="https://twitter.com/#!/kiranchandramoh">Twitter</a>,
+<a href="http://www.facebook.com/kiranchandramohan">Facebook</a>
+</li>
+</ul>
+
+<hr align="left" noshade="noshade" size="7">
+<b>Links</b> 
+<ul>
+    <li><a href="http://stackoverflow.com/questions/5869825/when-should-one-use-a-spinlock-instead-of-mutex">Spinlock vs Mutex at stackoverflow</a></li>
+    <!--<li><a href="linux_cmds.html">Useful linux commands</a></li>-->
+    <li><a href="http://people.ee.ethz.ch/~arkeller/linux/kernel_user_space_howto.html">Linux Kernel-User Space Interaction</a></li>
+    <!--<li><a href="common_english_mistakes.html">Common English mistakes</a></li>-->
+</ul>
+<hr align="left" noshade="noshade" size="7">
+
+</li>
+</body>
+</html>
