--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="keywords" content="kiran chandramohan phd edinburgh informatics chengannur cec homepage">
-<title> Homepage of Kiran Chandramohan </title></head><body bgcolor="#D3D3D3" link="#0000ef" text="#0000aa"> 
+<title> Homepage of Kiran Chandramohan </title></head><body bgcolor="#OOBFFF" link="#0000ef" text="#0000aa"> 
 <table border="0" width="700">
 	<tbody>
 	<tr> 
